Sugati/src/objects/Flight__c.object
<CustomObject>
    <description>Stores a list of Flights details records</description>
    <fields>
        <fullName>F_Airline_Code__c</fullName>
        <label>Airline Code</label>
        <picklist>
            <picklistValues>
                <fullName>2F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F_Airline__c</fullName>
        <label>Airline</label>
        <picklist>
            <picklistValues>
                <fullName>Adria Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aegean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aer Arann Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aer Lingus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeroflot Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerogal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerolineas Argentinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerolineas Del Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerolink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeromexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeropostal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Algerie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Botswana Pty.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Caledonie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Caledonie International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Caraibes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Dolomiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Engiadina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Europa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air France</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F_Flight_Code__c</fullName>
        <label>Flight Code</label>
        <picklist>
            <picklistValues>
                <fullName>2F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F_Where_to_go__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where to go</label>
        <referenceTo>Where_to_go__c</referenceTo>
        <relationshipLabel>Flights</relationshipLabel>
        <relationshipName>Flights</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Flight</label>
    <nameField>
        <displayFormat>F-{0000000000}</displayFormat>
        <label>Flight ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>